@@ -685,9 +685,9 @@ extern int flag_isoc99;
 
 extern int flag_isoc11;
 
-/* Nonzero means use the ISO C2X dialect of C.  */
+/* Nonzero means use the ISO C23 dialect of C.  */
 
-extern int flag_isoc2x;
+extern int flag_isoc23;
 
 /* Nonzero means that we have builtin functions, and main is an int.  */
 
