@@ -122,7 +122,7 @@ static void set_std_c89 (int, int);
 static void set_std_c99 (int);
 static void set_std_c11 (int);
 static void set_std_c17 (int);
-static void set_std_c2x (int);
+static void set_std_c23 (int);
 static void check_deps_environment_vars (void);
 static void handle_deferred_opts (void);
 static void sanitize_cpp_opts (void);
@@ -748,14 +748,14 @@ c_common_handle_option (size_t scode, const char *arg, HOST_WIDE_INT value,
 	set_std_c17 (false /* ISO */);
       break;
 
-    case OPT_std_c2x:
+    case OPT_std_c23:
       if (!preprocessing_asm_p)
-	set_std_c2x (true /* ISO */);
+	set_std_c23 (true /* ISO */);
       break;
 
     case OPT_std_gnu2x:
       if (!preprocessing_asm_p)
-	set_std_c2x (false /* ISO */);
+	set_std_c23 (false /* ISO */);
       break;
 
     case OPT_trigraphs:
@@ -892,7 +892,7 @@ c_common_post_options (const char **pfilename)
 
   /* C2X Annex F does not permit certain built-in functions to raise
      "inexact".  */
-  if (flag_isoc2x)
+  if (flag_isoc23)
     SET_OPTION_IF_UNSET (&global_options, &global_options_set,
 			 flag_fp_int_builtin_inexact, 0);
 
@@ -970,7 +970,7 @@ c_common_post_options (const char **pfilename)
 
   /* -Wold-style-definition is enabled by default for C2X.  */
   if (warn_old_style_definition == -1)
-    warn_old_style_definition = flag_isoc2x;
+    warn_old_style_definition = flag_isoc23;
 
   /* -Wshift-overflow is enabled by default in C99 and C++11 modes.  */
   if (warn_shift_overflow == -1)
@@ -1716,7 +1716,7 @@ set_std_c89 (int c94, int iso)
   flag_isoc94 = c94;
   flag_isoc99 = 0;
   flag_isoc11 = 0;
-  flag_isoc2x = 0;
+  flag_isoc23 = 0;
   lang_hooks.name = "GNU C89";
 }
 
@@ -1728,7 +1728,7 @@ set_std_c99 (int iso)
   flag_no_asm = iso;
   flag_no_nonansi_builtin = iso;
   flag_iso = iso;
-  flag_isoc2x = 0;
+  flag_isoc23 = 0;
   flag_isoc11 = 0;
   flag_isoc99 = 1;
   flag_isoc94 = 1;
@@ -1743,7 +1743,7 @@ set_std_c11 (int iso)
   flag_no_asm = iso;
   flag_no_nonansi_builtin = iso;
   flag_iso = iso;
-  flag_isoc2x = 0;
+  flag_isoc23 = 0;
   flag_isoc11 = 1;
   flag_isoc99 = 1;
   flag_isoc94 = 1;
@@ -1758,7 +1758,7 @@ set_std_c17 (int iso)
   flag_no_asm = iso;
   flag_no_nonansi_builtin = iso;
   flag_iso = iso;
-  flag_isoc2x = 0;
+  flag_isoc23 = 0;
   flag_isoc11 = 1;
   flag_isoc99 = 1;
   flag_isoc94 = 1;
@@ -1767,13 +1767,13 @@ set_std_c17 (int iso)
 
 /* Set the C 2X standard (without GNU extensions if ISO).  */
 static void
-set_std_c2x (int iso)
+set_std_c23 (int iso)
 {
   cpp_set_lang (parse_in, iso ? CLK_STDC2X: CLK_GNUC2X);
   flag_no_asm = iso;
   flag_no_nonansi_builtin = iso;
   flag_iso = iso;
-  flag_isoc2x = 1;
+  flag_isoc23 = 1;
   flag_isoc11 = 1;
   flag_isoc99 = 1;
   flag_isoc94 = 1;
